--- a/antlr/pom.xml
+++ b/antlr/pom.xml
@@ -7,17 +7,21 @@
     <groupId>fr.polytech</groupId>
     <artifactId>popo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.7.1</version>
+            <version>4.13.1</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-maven-plugin</artifactId>
-            <version>4.7.1</version>
+            <version>4.13.1</version>
         </dependency>
     </dependencies>
 
