--- a/antlr/pom.xml
+++ b/antlr/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>antlr4-maven-plugin</artifactId>
             <version>4.13.1</version>
         </dependency>
+        <dependency>
+            <groupId>fr.polytech</groupId>
+            <artifactId>kernel</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
