--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ target
 antlr/src/main/java/fr/polytech/MusicDSL*.java
 antlr/src/main/java/fr/polytech/MusicDSL*.interp
 antlr/src/main/java/fr/polytech/MusicDSL*.tokens
+
+.DS_Store
