--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ antlr/src/main/java/fr/polytech/MusicDSL*.tokens
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+# Node.js runtime environment
+node_modules/
