--- a/add-on_website/Dockerfile
+++ b/add-on_website/Dockerfile
@@ -4,9 +4,15 @@ WORKDIR /app
 
 COPY package.json package.json
 COPY server.js server.js
-COPY antlr-1.0-SNAPSHOT-jar-with-dependencies.jar midi-converter.jar
+# file in ../antlr/target/antlr-1.0-SNAPSHOT-jar-with-dependencies.jar
+COPY midi-converter.jar midi-converter.jar
 
 RUN npm install
+
+# install java
+RUN apt-get update && \
+    apt-get install -y openjdk-17-jre && \
+    apt-get clean
 
 EXPOSE 80
 
