--- a/add-on_website/package.json
+++ b/add-on_website/package.json
@@ -14,6 +14,7 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "fs": "^0.0.1-security",
+    "uuid": "^9.0.1"
   }
 }
