--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>7.6.0</version>
+        </dependency>
     </dependencies>
 
 </project>
